[package]
name = "sfml-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
egui-sfml = "0.9.0"
env_logger = "0.11.8"
log = "0.4.27"
rust-fontconfig = "1.0.1"
sfml = {version = "0.24.0", default-features = false, features = ["graphics"]}

oscilloscope-audio = {path = "../oscilloscope-audio"}
